--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 		<!-- Meta data -->
 		<title>Ditverkoopik &ndash; Welkom!</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-		<meta name="description" content="Ditverkoopik is een inkoop / verkoop / reparatie bedrijf van Telefoons, Laptops en overige associares. Onze prijzen zijn relatief altijd de laagste vergeleken met de andere concurrenten en we proberen de klanttevredenheid zo hoog mogelijk te houden.">
+		<meta name="description" content="Ditverkoopik is een inkoop / verkoop / reparatie bedrijf van Telefoons, Laptops en overige accessoires. Onze prijzen zijn relatief altijd de laagste vergeleken met de andere concurrenten en we proberen de klanttevredenheid zo hoog mogelijk te houden.">
 		<meta name="keywords" content="">
 		<meta property="og:title" content="Ditverkoopik - Welkom!">
 		<meta property="og:site_name" content="Ditverkoopik">
 		<meta property="og:type" content="website">
-		<meta property="og:description" content="Ditverkoopik is een inkoop / verkoop / reparatie bedrijf van Telefoons, Laptops en overige associares. Onze prijzen zijn relatief altijd de laagste vergeleken met de andere concurrenten en we proberen de klanttevredenheid zo hoog mogelijk te houden.">
+		<meta property="og:description" content="Ditverkoopik is een inkoop / verkoop / reparatie bedrijf van Telefoons, Laptops en overige accessoires. Onze prijzen zijn relatief altijd de laagste vergeleken met de andere concurrenten en we proberen de klanttevredenheid zo hoog mogelijk te houden.">
 		<meta property="og:image" content="res/logo_1_1.png">
 		<!-- Style related -->
 		<link rel="shortcut icon" href="res/logo_1_1.png">
