--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				</ul>
 			</div>
 			<div class="-phone">
-				<a href='#top'><img src="res/logo_text_1_1.png"></a>
+				<a href='#top'><img src="res/logo_1_1_alt.png"></a>
 			</div>
 		</header>
 		<div id="top"></div>
