--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			<div id="nsec6">
 				
 			</div>
-			<!--div id="nsecrev">
-				<h2>Reviews</h2>
+			<div id="nsecrev">
+				<p style="margin-bottom: 2em;"><b>Oke oke,<br>Wel heel leuk en aardig maar…<br>…Wat zijn de reviews???</b></p>
 				<div class="-review">
 					<div>
 						<div class="-user">
@@ -186,7 +186,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 						</div>
 					</div>
 				</div>
-			</div-->
+			</div>
 			<!--div id="sec1">
 				<div class="-cover"></div>
 				<div class="-content">
