--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				<div class="-content">
 					<p>We repareren je telefoon met liefde! Heeft uw telefoon een nieuwe scherm nodig, accu, microfoon, luidspreker… noem het maar op, we helpen je graag. Voor de laagste prijs die je kan vinden!</p>
 				</div>
+				<img src="res/phonec1.png" class="-phone">
 			</div>
 			<div id="nsec4">
 				<div class="-heading">
