--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			<div class="-laptop">
 				<h1>Ditverkoopik</h1>
 				<ul>
-					<li>Over ons</li>
-					<li>Contact</li>
-					<li>Adres</li>
+					<li>Kopen</li>
 					<li>Reparaties</li>
 					<li>Inruilen</li>
-					<li>Kopen</li>
+					<li>Contact</li>
+					<li>Over Ons</li>
 				</ul>
 			</div>
 			<div class="-phone">
@@ -75,31 +74,31 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				<img src="res/phone1.png" class="-phone">
 			</div>
 			<div id="nsec3">
-				<div class="-heading">
+				<!--div class="-heading">
 					<h2>GERARANDEERD LAAGSTE PRIJS</h2>
-				</div>
+				</div-->
 				<div class="-content">
 					<p>We repareren je telefoon met liefde! Heeft uw telefoon een nieuwe scherm nodig, accu, microfoon, luidspreker… noem het maar op, we helpen je graag. Voor de laagste prijs die je kan vinden!</p>
 				</div>
 				<img src="res/phonec1.png" class="-phone">
 			</div>
 			<div id="nsec4">
-				<div class="-heading">
+				<!--div class="-heading">
 					<h2>GEGARANDEERD LAAGSTE PRIJS</h2>
-				</div>
+				</div-->
 				<div class="-heading2">
 					<p>Of wil je eindelijk een keer van je oude telefoon af?</p>
 				</div>
 				<div class="-content">
 					<p>Dat kan zeker! Ruil hem in voor een andere mooie telefoon bij ons! “En als ik daar geen zin in heb?”.<br>Dan geven we je een leuke prijs!</p>
 				</div>
-				<div class="-extra">
+				<!--div class="-extra">
 					<p>Jij blij? Wij blij!</p>
-				</div>
+				</div-->
 			</div>
 			<div id="nsec5">
 				<div class="-content">
-					<p>Dat zal ik je vertellen!<br>Laat ik beginnen met me zelf voortestellen.<br>Hoi, ik ben Nick en ik ven 15 jaar oud. “”15?” Ja 15.<br>Ik ben op me 13de begonnen met het repareren van telefoons. Het was een hobby.<br>In de afgelopen jaren heb ik behoorlijk wat ervaring opgelopen. Er zijn goeie tijden geweest maar ook helaas tegenslagen, waar ik natuurlijk van heb geleerd. Ik heb nooit opgegeven, anders had ik u vandaag niet kunnen helpen ;)</p>
+					<p><!--Dat zal ik je vertellen!<br>Laat ik beginnen met me zelf voortestellen.<br>Hoi, ik ben Nick en ik ven 15 jaar oud. “”15?” Ja 15.<br>Ik ben op me 13de begonnen met het repareren van telefoons. Het was een hobby.<br>In de afgelopen jaren heb ik behoorlijk wat ervaring opgelopen. Er zijn goeie tijden geweest maar ook helaas tegenslagen, waar ik natuurlijk van heb geleerd. Ik heb nooit opgegeven, anders had ik u vandaag niet kunnen helpen ;)-->Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				</div>
 			</div>
 			<div id="nsec6">
