--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					<h2>GEGARANDEERD LAAGSTE PRIJS</h2>
 				</div-->
 				<div class="-heading2">
-					<p>Of wil je eindelijk een keer van je oude telefoon af?</p>
+					<p>Of wil je van je oude telefoon af?</p>
 				</div>
 				<div class="-content">
 					<p>Dat kan zeker! Ruil hem in voor een andere mooie telefoon bij ons! “En als ik daar geen zin in heb?”.<br>Dan geven we je een leuke prijs!</p>
