--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					<h2>GERARANDEERD LAAGSTE PRIJS</h2>
 				</div-->
 				<div class="-content">
-					<p>We repareren je telefoon met liefde! Heeft uw telefoon een nieuwe scherm nodig, accu, microfoon, luidspreker… noem het maar op, we helpen je graag. Voor de laagste prijs die je kan vinden!</p>
+					<p>We repareren je telefoon met liefde! Heeft uw telefoon een nieuwe scherm nodig, accu, microfoon, luidspreker… noem het maar op, we helpen je graag. Voor de laagste prijs die je kan vinden! Jij blij? Wij blij!</p>
 				</div>
 				<img src="res/phonec1.png" class="-phone">
 			</div>
