--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			</div>
 			<div id="nsec2">
 				<div class="-content">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p class="domi-spanify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				</div>
 				<img src="res/phone1.png" class="-phone">
 			</div>
@@ -78,7 +78,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					<h2>GERARANDEERD LAAGSTE PRIJS</h2>
 				</div-->
 				<div class="-content">
-					<p>We repareren je telefoon met liefde! Heeft uw telefoon een nieuwe scherm nodig, accu, microfoon, luidspreker… noem het maar op, we helpen je graag. Voor de laagste prijs die je kan vinden! Jij blij? Wij blij!</p>
+					<p class="domi-spanify">We repareren je telefoon met liefde! Heeft uw telefoon een nieuwe scherm nodig, accu, microfoon, luidspreker… noem het maar op, we helpen je graag. Voor de laagste prijs die je kan vinden! Jij blij? Wij blij!</p>
 				</div>
 				<img src="res/phonec1.png" class="-phone">
 			</div>
@@ -90,7 +90,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					<p>Of wil je van je oude telefoon af?</p>
 				</div>
 				<div class="-content">
-					<p>Dat kan zeker! Ruil hem in voor een andere mooie telefoon bij ons! “En als ik daar geen zin in heb?”.<br>Dan geven we je een leuke prijs!</p>
+					<p class="domi-spanify">Dat kan zeker! Ruil hem in voor een andere mooie telefoon bij ons! “En als ik daar geen zin in heb?”.<br>Dan geven we je een leuke prijs!</p>
 				</div>
 				<!--div class="-extra">
 					<p>Jij blij? Wij blij!</p>
@@ -98,7 +98,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			</div>
 			<div id="nsec5">
 				<div class="-content">
-					<p><!--Dat zal ik je vertellen!<br>Laat ik beginnen met me zelf voortestellen.<br>Hoi, ik ben Nick en ik ven 15 jaar oud. “”15?” Ja 15.<br>Ik ben op me 13de begonnen met het repareren van telefoons. Het was een hobby.<br>In de afgelopen jaren heb ik behoorlijk wat ervaring opgelopen. Er zijn goeie tijden geweest maar ook helaas tegenslagen, waar ik natuurlijk van heb geleerd. Ik heb nooit opgegeven, anders had ik u vandaag niet kunnen helpen ;)-->Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p class="domi-spanify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				</div>
 			</div>
 			<div id="nsec6">
@@ -187,21 +187,6 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					</div>
 				</div>
 			</div>
-			<!--div id="sec1">
-				<div class="-cover"></div>
-				<div class="-content">
-					<img class="-logo" src="res/logo_1_1.png">
-					<h1>Ditverkoopik</h1>
-					<p>Een inkoop, verkoop en reparatie bedrijf van Telefoons, Laptops en overige</p>
-					<p class="-social">
-						<a href="https://www.instagram.com/ditverkoopik/" target="_blank" data-tooltip="Instagram"><i class="fab fa-instagram"></i></a>
-						<a href="https://www.facebook.com/ditverkoopik/" target="_blank" data-tooltip="Facebook"><i class="fab fa-facebook"></i></a>
-						<a href="https://g.co/kgs/fHMWYr" target="_blank" data-tooltip="Google"><i class="fab fa-google"></i></a>
-						<a href="https://wa.me/message/I6GB6KOL53O2C1" target="_blank" data-tooltip="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-						<a href="https://www.marktplaats.nl/smb-profile/profile/25131853" target="_blank" data-tooltip="Marktplaats"><img src="res/marktplaats.png" style="height: 1em; position: relative; top: .125em;"></a>
-					</p>
-				</div>
-			</div-->
 			<div id="sec2">
 				<h2>Over ons</h2>
 				<p>Ditverkoopik is een inkoop / verkoop / reparatie bedrijf van Telefoons, Laptops en overige associares. Onze prijzen zijn relatief altijd de laagste vergeleken met de andere concurrenten en we proberen de klanttevredenheid zo hoog mogelijk te houden.</p>
