--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					<p>Of wil je van je oude telefoon af?</p>
 				</div>
 				<div class="-content">
-					<p class="domi-spanify">Dat kan zeker! Ruil hem in voor een andere mooie telefoon bij ons! “En als ik daar geen zin in heb?”.<br>Dan geven we je een leuke prijs!</p>
+					<p class="domi-spanify">Dat kan zeker! Ruil hem in voor een andere mooie telefoon bij ons! “En als ik daar geen zin in heb?”. Dan geven we je een leuke prijs!</p>
 				</div>
 				<!--div class="-extra">
 					<p>Jij blij? Wij blij!</p>
