--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			<div class="-laptop">
 				<h1>Ditverkoopik</h1>
 				<ul>
-					<li>Kopen</li>
-					<li>Reparaties</li>
-					<li>Inruilen</li>
-					<li>Contact</li>
-					<li>Over Ons</li>
+					<li><a href='#nsec2'>Kopen</a></li>
+					<li><a href='#nsec3'>Reparaties</a></li>
+					<li><a href='#nsec4'>Inruilen</a></li>
+					<li><a href='#nsec5'>Contact</a></li>
+					<li><a href='#nsec6'>Over Ons</a></li>
 				</ul>
 			</div>
 			<div class="-phone">
@@ -105,7 +105,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				
 			</div>
 			<div id="nsecrev">
-				<p style="margin-bottom: 2em;"><b>Oke oke,<br>Wel heel leuk en aardig maar…<br>…Wat zijn de reviews???</b></p>
+				<p style="font-size: 1.25em; text-align: center; width: 75%; margin: 0 auto 1.5em auto; white-space: initial; text-shadow: 0 0 10px #fff; z-index: 99; position: relative;"><b style='font-size: 2em; display: block;'>Oké oké,</b>maar wat zijn de reviews?</p>
 				<div class="-review">
 					<div>
 						<div class="-user">
@@ -193,9 +193,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			</div>
 			<div>
 				<h2>Contact info</h2>
-				<p>Naam: Nick Nijland<br>Telefoonnummer: 0639311181<br>Email: ditverkoopik@outlook.com</p>
-			</div>
-			<div>
+				<p>Naam: Nick Nijland<br>Telefoonnummer: 0639311181<br>Email: ditverkoopik@outlook.com</p><br><br>
 				<h2>Adres</h2>
 				<p>Straat: Dorpsstraat<br>Huisnummer: 59<br>Plaats: Tynaarlo<br>Postcode: 9482PB</p>
 			</div>
