--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					<li><a href='#nsec2'>Kopen</a></li>
 					<li><a href='#nsec3'>Reparaties</a></li>
 					<li><a href='#nsec4'>Inruilen</a></li>
-					<li><a href='#nsec5'>Contact</a></li>
-					<li><a href='#nsec6'>Over Ons</a></li>
+					<li><a href='#page-contact'>Contact</a></li>
+					<li><a href='#page-overons'>Over Ons</a></li>
 				</ul>
 			</div>
 			<div class="-phone">
@@ -101,9 +101,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					<p class="domi-spanify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				</div>
 			</div>
-			<div id="nsec6">
-				
-			</div>
+			<!--div id="nsec6"></div-->
 			<div id="nsecrev">
 				<p style="font-size: 1.25em; text-align: center; width: 75%; margin: 0 auto 1.5em auto; white-space: initial; text-shadow: 0 0 10px #fff; z-index: 99; position: relative;"><b style='font-size: 2em; display: block;'>Oké oké,</b>maar wat zijn de reviews?</p>
 				<div class="-review">
@@ -187,11 +185,11 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					</div>
 				</div>
 			</div>
-			<div id="sec2">
+			<div id="page-overons">
 				<h2>Over ons</h2>
 				<p>Ditverkoopik is een inkoop / verkoop / reparatie bedrijf van Telefoons, Laptops en overige associares. Onze prijzen zijn relatief altijd de laagste vergeleken met de andere concurrenten en we proberen de klanttevredenheid zo hoog mogelijk te houden.</p>
 			</div>
-			<div>
+			<div id="page-contact">
 				<h2>Contact info</h2>
 				<p>Naam: Nick Nijland<br>Telefoonnummer: 0639311181<br>Email: ditverkoopik@outlook.com</p><br><br>
 				<h2>Adres</h2>
