--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					<p class="domi-spanify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				</div>
 				<img src="res/phone1.png" class="-phone">
+				<div class="-contactbutton">
+					<a href="#page-contact"><button>Contact</button></a>
+				</div>
 			</div>
 			<div id="nsec3">
 				<!--div class="-heading">
@@ -81,6 +84,9 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					<p class="domi-spanify">We repareren je telefoon met liefde! Heeft uw telefoon een nieuwe scherm nodig, accu, microfoon, luidspreker… noem het maar op, we helpen je graag. Voor de laagste prijs die je kan vinden! Jij blij? Wij blij!</p>
 				</div>
 				<img src="res/phonec1.png" class="-phone">
+				<div class="-contactbutton">
+					<a href="#page-contact"><button>Contact</button></a>
+				</div>
 			</div>
 			<div id="nsec4">
 				<!--div class="-heading">
@@ -95,10 +101,16 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				<!--div class="-extra">
 					<p>Jij blij? Wij blij!</p>
 				</div-->
+				<div class="-contactbutton">
+					<a href="#page-contact"><button>Contact</button></a>
+				</div>
 			</div>
 			<div id="nsec5">
 				<div class="-content">
 					<p class="domi-spanify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				</div>
+				<div class="-contactbutton">
+					<a href="#page-contact"><button>Contact</button></a>
 				</div>
 			</div>
 			<!--div id="nsec6"></div-->
@@ -193,7 +205,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			</div>
 			<div id="page-contact">
 				<h2>Contact info</h2>
-				<p>Naam: Nick Nijland<br>Telefoonnummer: 0639311181<br>Email: ditverkoopik@outlook.com</p><br><br>
+				<p>Naam: Nick Nijland<br>Telefoonnummer: <a href='tel:0639311181'>0639311181</a><br>Email: <a href='mailto:ditverkoopik@outlook.com'>ditverkoopik@outlook.com</a></p><br><br>
 				<h2>Adres</h2>
 				<p>Straat: Dorpsstraat<br>Huisnummer: 59<br>Plaats: Tynaarlo<br>Postcode: 9482PB</p>
 			</div>
