--- a/index.html
+++ b/index.html
@@ -70,10 +70,11 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			<div id="nsec2">
 				<div class="-content">
 					<p class="domi-spanify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<!--p style='transform: skewX(10deg);'><a target="_blank" href="https://www.instagram.com/ditverkoopik/">Bekijk ons assortiment!</a></p-->
 				</div>
 				<img src="res/phone1.png" class="-phone">
 				<div class="-contactbutton">
-					<a href="#page-contact"><button>Contact</button></a>
+					<a target="_blank" href="https://www.instagram.com/ditverkoopik/"><button>Bekijk ons assortiment!</button></a>
 				</div>
 			</div>
 			<div id="nsec3">
@@ -82,10 +83,11 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				</div-->
 				<div class="-content">
 					<p class="domi-spanify">We repareren je telefoon met liefde! Heeft uw telefoon een nieuwe scherm nodig, accu, microfoon, luidspreker… noem het maar op, we helpen je graag. Voor de laagste prijs die je kan vinden! Jij blij? Wij blij!</p>
+					<!--p style='transform: skewX(-10deg);'><a target="_blank" href="https://wa.me/message/I6GB6KOL53O2C1">Vraag een reparatie aan!</a></p-->
 				</div>
 				<img src="res/phonec1.png" class="-phone">
 				<div class="-contactbutton">
-					<a href="#page-contact"><button>Contact</button></a>
+					<a target="_blank" href="https://wa.me/message/I6GB6KOL53O2C1"><button>Vraag een reparatie aan!</button></a>
 				</div>
 			</div>
 			<div id="nsec4">
@@ -97,20 +99,22 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				</div>
 				<div class="-content">
 					<p class="domi-spanify">Dat kan zeker! Ruil hem in voor een andere mooie telefoon bij ons! “En als ik daar geen zin in heb?”. Dan geven we je een leuke prijs!</p>
+					<!--p style='transform: skewX(10deg);'><a target="_blank" href="https://wa.me/message/I6GB6KOL53O2C1">Neem contact met ons op!</a></p-->
 				</div>
 				<!--div class="-extra">
 					<p>Jij blij? Wij blij!</p>
 				</div-->
 				<div class="-contactbutton">
-					<a href="#page-contact"><button>Contact</button></a>
+					<a target="_blank" href="https://wa.me/message/I6GB6KOL53O2C1"><button>Neem contact met ons op!</button></a>
 				</div>
 			</div>
 			<div id="nsec5">
 				<div class="-content">
 					<p class="domi-spanify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<!--p style='transform: skewX(-10deg);'><a target="_blank" href="https://wa.me/message/I6GB6KOL53O2C1">Nog steeds vragen?</a></p-->
 				</div>
 				<div class="-contactbutton">
-					<a href="#page-contact"><button>Contact</button></a>
+					<a target="_blank" href="https://wa.me/message/I6GB6KOL53O2C1"><button>Nog steeds vragen?</button></a>
 				</div>
 			</div>
 			<!--div id="nsec6"></div-->
