--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 	<head>
 		<!-- Meta data -->
 		<title>Ditverkoopik &ndash; Welkom!</title>
+		<meta name="google-site-verification" content="dhk-PKhG_oZUa9I_39GHEoQ7KF0dRgReNOEL5hqeppU" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
 		<meta name="description" content="Ditverkoopik is een inkoop / verkoop / reparatie bedrijf van telefoons, laptops en overige accessoires. Onze prijzen zijn relatief altijd het laagste, vergeleken met de andere concurrenten. We proberen de klanttevredenheid altijd zo hoog mogelijk te houden.">
 		<meta name="keywords" content="">
