--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 		<meta name="google-site-verification" content="dhk-PKhG_oZUa9I_39GHEoQ7KF0dRgReNOEL5hqeppU" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
 		<meta name="description" content="Ditverkoopik is een inkoop / verkoop / reparatie bedrijf van telefoons, laptops en overige accessoires. Onze prijzen zijn relatief altijd het laagste, vergeleken met de andere concurrenten. We proberen de klanttevredenheid altijd zo hoog mogelijk te houden.">
-		<meta name="keywords" content="">
+		<meta name="keywords" content="dit verkoop ik, ditverkoopik, iphone, iphone 11, iphone 12, ik verkoop telefoons, ik verkoop elektronica">
 		<meta property="og:title" content="Ditverkoopik - Welkom!">
 		<meta property="og:site_name" content="Ditverkoopik">
 		<meta property="og:type" content="website">
@@ -40,7 +40,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					<li><a href='#nsec3'>Reparaties</a></li>
 					<li><a href='#nsec4'>Inruilen</a></li>
 					<li><a href='#page-contact'>Contact</a></li>
-					<li><a href='#page-overons'>Over Ons</a></li>
+					<!--li><a href='#page-overons'>Over Ons</a></li-->
 				</ul>
 			</div>
 			<div class="-phone">
@@ -70,7 +70,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			</div>
 			<div id="nsec2">
 				<div class="-content">
-					<p class="domi-spanify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p class="domi-spanify">Beloon jezelf een keer met een mooie nieuwe telefoon! We hebben er altijd wel een liggen die bij je past. Wil je hem gelijk kunnen gebruiken? Dat kan! Dat betekent met screenprotector, hoesje en originele doos en oplader natuurlijk en als je wilt zetten we je oude telefoon ook nog over naar de nieuwe. Zodat je hem gelijk kunt gebruiken.</p>
 					<!--p style='transform: skewX(10deg);'><a target="_blank" href="https://www.instagram.com/ditverkoopik/">Bekijk ons assortiment!</a></p-->
 				</div>
 				<img src="res/phone1.png" class="-phone">
@@ -92,26 +92,16 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				</div>
 			</div>
 			<div id="nsec4">
-				<!--div class="-heading">
-					<h2>GEGARANDEERD LAAGSTE PRIJS</h2>
-				</div-->
-				<div class="-heading2">
-					<p>Of wil je van je oude telefoon af?</p>
-				</div>
 				<div class="-content">
-					<p class="domi-spanify">Dat kan zeker! Ruil hem in voor een andere mooie telefoon bij ons! “En als ik daar geen zin in heb?”. Dan geven we je een leuke prijs!</p>
-					<!--p style='transform: skewX(10deg);'><a target="_blank" href="https://wa.me/message/I6GB6KOL53O2C1">Neem contact met ons op!</a></p-->
+					<p class="domi-spanify">Dat kan zeker! Ruil hem in voor een andere mooie telefoon bij ons! <br> “En als ik daar geen zin in heb?”. <br> Dan geven we je een leuke prijs!</p>
 				</div>
-				<!--div class="-extra">
-					<p>Jij blij? Wij blij!</p>
-				</div-->
 				<div class="-contactbutton">
 					<a target="_blank" href="https://wa.me/message/I6GB6KOL53O2C1"><button>Neem contact met ons op!</button></a>
 				</div>
 			</div>
 			<div id="nsec5">
 				<div class="-content">
-					<p class="domi-spanify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p class="domi-spanify">Goeie vraag! Wij zijn een inkoop / verkoop en reparatie bedrijf in telefoons, laptops, computers en accessoires. We proberen de deal altijd zo soepel en veilig mogelijk te laten verlopen zodat u zich altijd op het gemak voelt. Onze prijzen zijn altijd relatief het laagste vergeleken met onze concurrenten en we proberen de klanttevredenheid zo hoog mogelijk te houden!</p>
 					<!--p style='transform: skewX(-10deg);'><a target="_blank" href="https://wa.me/message/I6GB6KOL53O2C1">Nog steeds vragen?</a></p-->
 				</div>
 				<div class="-contactbutton">
@@ -129,7 +119,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 								<h3>Robert</h3>
 							</div>
 							<div class="-msg">
-								<h3>Amazing!</h3>
+								<h3>1. Amazing!</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
 								<div class="-stars">
@@ -149,7 +139,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 								<h3>Robert</h3>
 							</div>
 							<div class="-msg">
-								<h3>Amazing!</h3>
+								<h3>2. Amazing!</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
 								<div class="-stars">
@@ -169,7 +159,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 								<h3>Robert</h3>
 							</div>
 							<div class="-msg">
-								<h3>Amazing!</h3>
+								<h3>3. Amazing!</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
 								<div class="-stars">
@@ -189,7 +179,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 								<h3>Robert</h3>
 							</div>
 							<div class="-msg">
-								<h3>Amazing!</h3>
+								<h3>4. Amazing!</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
 								<div class="-stars">
@@ -204,15 +194,23 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					</div>
 				</div>
 			</div>
-			<div id="page-overons">
+			<!--div id="page-overons">
 				<h2>Over ons</h2>
 				<p>Ditverkoopik is een inkoop / verkoop / reparatie bedrijf van Telefoons, Laptops en overige associares. Onze prijzen zijn relatief altijd de laagste vergeleken met de andere concurrenten en we proberen de klanttevredenheid zo hoog mogelijk te houden.</p>
-			</div>
+			</div-->
 			<div id="page-contact">
 				<h2>Contact info</h2>
-				<p>Naam: Nick Nijland<br>Telefoonnummer: <a href='tel:0639311181'>0639311181</a><br>Email: <a href='mailto:ditverkoopik@outlook.com'>ditverkoopik@outlook.com</a></p><br><br>
+				<p><i class="fas fa-user"></i> Naam: Nick Nijland<br><i class="fas fa-phone-alt"></i> Telefoonnummer: <a href='tel:0639311181'>0639311181</a><br><i class="fas fa-envelope"></i> Email: <a href='mailto:ditverkoopik@outlook.com'>ditverkoopik@outlook.com</a></p>
+				<p class="-social">
+					<a href="https://www.instagram.com/ditverkoopik/" target="_blank" data-tooltip="Instagram"><i class="fab fa-instagram"></i></a>
+					<a href="https://www.facebook.com/ditverkoopik/" target="_blank" data-tooltip="Facebook"><i class="fab fa-facebook"></i></a>
+					<a href="https://g.co/kgs/fHMWYr" target="_blank" data-tooltip="Google"><i class="fab fa-google"></i></a>
+					<a href="https://wa.me/message/I6GB6KOL53O2C1" target="_blank" data-tooltip="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+					<a href="https://www.marktplaats.nl/smb-profile/profile/25131853" target="_blank" data-tooltip="Marktplaats"><img src="res/marktplaats-orange-one.png" style="height: 1em; position: relative; top: .125em;"></a>
+				</p><br><br>
 				<h2>Adres</h2>
 				<p>Straat: Dorpsstraat<br>Huisnummer: 59<br>Plaats: Tynaarlo<br>Postcode: 9482PB</p>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d299.5958304273201!2d6.616547789736888!3d53.07846516490942!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c82ee266f3955b%3A0x8dbe6d431695b6dc!2sDorpsstraat%2059%2C%209482%20PB%20Tynaarlo%2C%20Netherlands!5e0!3m2!1sen!2sro!4v1610053281963!5m2!1sen!2sro" style="width: 100%; height: 450px; border: 0; border-radius: 5px;" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 			</div>
 		</div>
 	</body>
