--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			</div>
 			<div id="nsec2">
 				<div class="-content">
-					<p class="domi-spanify">Beloon jezelf een keer met een mooie nieuwe telefoon! We hebben er altijd wel een liggen die bij je past. Wil je hem gelijk kunnen gebruiken? Dat kan! Dat betekent met screenprotector, hoesje en originele doos en oplader natuurlijk en als je wilt zetten we je oude telefoon ook nog over naar de nieuwe. Zodat je hem gelijk kunt gebruiken.</p>
+					<p class="domi-spanify">Beloon jezelf een keer met een mooie nieuwe telefoon! Wil je hem gelijk kunnen gebruiken? Dat kan! Dat houd in: Schermprotector, hoesje, doos en oplader en we zetten ook je oude telefoon over naar je nieuwe. Zodat je hem meteen kunt gebruiken!</p>
 					<!--p style='transform: skewX(10deg);'><a target="_blank" href="https://www.instagram.com/ditverkoopik/">Bekijk ons assortiment!</a></p-->
 				</div>
 				<img src="res/phone1.png" class="-phone">
