--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				<p>Ditverkoopik is een inkoop / verkoop / reparatie bedrijf van Telefoons, Laptops en overige associares. Onze prijzen zijn relatief altijd de laagste vergeleken met de andere concurrenten en we proberen de klanttevredenheid zo hoog mogelijk te houden.</p>
 			</div-->
 			<div id="page-contact">
-				<h2>Contact info</h2>
+				<h1 style="text-align: center;">Contact info</h1>
 				<p><i class="fas fa-user"></i> Naam: Nick Nijland<br><i class="fas fa-phone-alt"></i> Telefoonnummer: <a href='tel:0639311181'>0639311181</a><br><i class="fas fa-envelope"></i> Email: <a href='mailto:ditverkoopik@outlook.com'>ditverkoopik@outlook.com</a></p>
 				<p class="-social">
 					<a href="https://www.instagram.com/ditverkoopik/" target="_blank" data-tooltip="Instagram"><i class="fab fa-instagram"></i></a>
@@ -208,8 +208,8 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					<a href="https://wa.me/message/I6GB6KOL53O2C1" target="_blank" data-tooltip="WhatsApp"><i class="fab fa-whatsapp"></i></a>
 					<a href="https://www.marktplaats.nl/smb-profile/profile/25131853" target="_blank" data-tooltip="Marktplaats"><img src="res/marktplaats-orange-one.png" style="height: 1em; position: relative; top: .125em;"></a>
 				</p><br><br>
-				<h2>Adres</h2>
-				<p>Straat: Dorpsstraat<br>Huisnummer: 59<br>Plaats: Tynaarlo<br>Postcode: 9482PB</p>
+				<!--h2>Adres</h2>
+				<p>Straat: Dorpsstraat<br>Huisnummer: 59<br>Plaats: Tynaarlo<br>Postcode: 9482PB</p-->
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d299.5958304273201!2d6.616547789736888!3d53.07846516490942!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c82ee266f3955b%3A0x8dbe6d431695b6dc!2sDorpsstraat%2059%2C%209482%20PB%20Tynaarlo%2C%20Netherlands!5e0!3m2!1sen!2sro!4v1610053281963!5m2!1sen!2sro" style="width: 100%; height: 450px; border: 0; border-radius: 5px;" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 			</div>
 		</div>
