--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				<p>Ditverkoopik is een inkoop / verkoop / reparatie bedrijf van Telefoons, Laptops en overige associares. Onze prijzen zijn relatief altijd de laagste vergeleken met de andere concurrenten en we proberen de klanttevredenheid zo hoog mogelijk te houden.</p>
 			</div-->
 			<div id="page-contact">
-				<h1 style="text-align: center;">Contact info</h1>
+				<h1>Contact info</h1>
 				<p><i class="fas fa-user"></i> Naam: Nick Nijland<br><i class="fas fa-phone-alt"></i> Telefoonnummer: <a href='tel:0639311181'>0639311181</a><br><i class="fas fa-envelope"></i> Email: <a href='mailto:ditverkoopik@outlook.com'>ditverkoopik@outlook.com</a></p>
 				<p class="-social">
 					<a href="https://www.instagram.com/ditverkoopik/" target="_blank" data-tooltip="Instagram"><i class="fab fa-instagram"></i></a>
