--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 		<link rel="shortcut icon" href="res/logo_1_1.png">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.20/dist/css/splide.min.css">
 		<!-- Script related -->
 		<script src="https://kit.fontawesome.com/043c21c0aa.js" crossorigin="anonymous"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
 		<script src="script.js"></script>
 	</head>
 	<body>
@@ -111,86 +113,90 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			<!--div id="nsec6"></div-->
 			<div id="nsecrev">
 				<p style="font-size: 1.25em; text-align: center; width: 75%; margin: 0 auto 1.5em auto; white-space: initial; text-shadow: 0 0 10px #fff; z-index: 99; position: relative;"><b style='font-size: 2em; display: block;'>Oké oké,</b>maar wat zijn de reviews?</p>
-				<div class="-reviews">
-					<div class="-review">
-						<div>
-							<div class="-user">
-								<img src="https://images.unsplash.com/photo-1494708001911-679f5d15a946?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
-								<h3>Robert</h3>
-							</div>
-							<div class="-msg">
-								<h3>1. Amazing!</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-								<div class="-stars">
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
+				<div class="-reviews splide">
+					<div class="splide__track">
+						<ul class="splide__list">
+							<li class="-review splide__slide">
+								<div>
+									<div class="-user">
+										<img src="https://images.unsplash.com/photo-1494708001911-679f5d15a946?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
+										<h3>Robert</h3>
+									</div>
+									<div class="-msg">
+										<h3>1. Amazing!</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+										<div class="-stars">
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+										</div>
+									</div>
 								</div>
-							</div>
-						</div>
-					</div>
-					<div class="-review">
-						<div>
-							<div class="-user">
-								<img src="https://images.unsplash.com/photo-1494708001911-679f5d15a946?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
-								<h3>Robert</h3>
-							</div>
-							<div class="-msg">
-								<h3>2. Amazing!</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-								<div class="-stars">
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
+							</li>
+							<li class="-review splide__slide">
+								<div>
+									<div class="-user">
+										<img src="https://images.unsplash.com/photo-1494708001911-679f5d15a946?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
+										<h3>Robert</h3>
+									</div>
+									<div class="-msg">
+										<h3>2. Amazing!</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+										<div class="-stars">
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+										</div>
+									</div>
 								</div>
-							</div>
-						</div>
-					</div>
-					<div class="-review">
-						<div>
-							<div class="-user">
-								<img src="https://images.unsplash.com/photo-1494708001911-679f5d15a946?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
-								<h3>Robert</h3>
-							</div>
-							<div class="-msg">
-								<h3>3. Amazing!</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-								<div class="-stars">
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
+							</li>
+							<li class="-review splide__slide">
+								<div>
+									<div class="-user">
+										<img src="https://images.unsplash.com/photo-1494708001911-679f5d15a946?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
+										<h3>Robert</h3>
+									</div>
+									<div class="-msg">
+										<h3>3. Amazing!</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+										<div class="-stars">
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+										</div>
+									</div>
 								</div>
-							</div>
-						</div>
-					</div>
-					<div class="-review">
-						<div>
-							<div class="-user">
-								<img src="https://images.unsplash.com/photo-1494708001911-679f5d15a946?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
-								<h3>Robert</h3>
-							</div>
-							<div class="-msg">
-								<h3>4. Amazing!</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-								<div class="-stars">
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
-									<i style="color: var(--orange-one);" class="fas fa-star"></i>
+							</li>
+							<li class="-review splide__slide">
+								<div>
+									<div class="-user">
+										<img src="https://images.unsplash.com/photo-1494708001911-679f5d15a946?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
+										<h3>Robert</h3>
+									</div>
+									<div class="-msg">
+										<h3>4. Amazing!</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+										<div class="-stars">
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+										</div>
+									</div>
 								</div>
-							</div>
-						</div>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
